--- a/gold-admin-frontend/src/app/views/pages/broker/shop/product/product.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shop/product/product.component.html
@@ -16,22 +16,22 @@
                 <hr>
                 <div class="row">
                     <div class="col-md-4">
-                        <p>SKU Code &nbsp;<span class="text-color font-weight-500">{{product.sku}}</span>
+                        <p>SKU Code :&nbsp;<span class="text-color font-weight-500">{{product.sku}}</span>
                         </p>
-                        <p>Metal Type &nbsp;<span
+                        <p>Metal Type :&nbsp;<span
                                 class="text-color font-weight-500">{{product.subCategory.category.metalType.metalType}}</span>
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <p>Jewellery Type &nbsp;<span
+                        <p>Jewellery Type :&nbsp;<span
                                 class="text-color font-weight-500">{{product.subCategory.subCategoryName}}</span>
                         </p>
-                        <p>Conversion Factor &nbsp;<span
+                        <p>Conversion Factor :&nbsp;<span
                                 class="text-color font-weight-500">{{product.subCategory.category.conversionFactor}}</span>
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <p>Weight &nbsp;<span class="text-color font-weight-500">{{product.weight}}
+                        <p>Weight :&nbsp;<span class="text-color font-weight-500">{{product.weight}}
                                 Gram</span>
                         </p>
                     </div>
