--- a/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.html
@@ -80,7 +80,8 @@
                                     <ng-template #elseBlock>
                                         <div>
                                             <input #qtyInput type="text" class="form-control productQtyInput"
-                                                name="cart-item-{{item.cartId}}" [(ngModel)]="item.quantity" numbersOnly>
+                                                name="cart-item-{{item.cartId}}" [(ngModel)]="item.quantity"
+                                                (input)="updateInput($event)" numbersOnly>
                                         </div>
                                         <div class="pt-3">
                                             <kt-button [myClass]="'updateQty'" [value]="'Update'" [type]="'button'"
